# tauri-dev

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/release/assets/: checksums.sh  package.ps1  package.sh  verify.sh
.github/scripts/release/github/: cleanup-artifacts.sh
.github/scripts/release/metadata/: beta.py  stable.py
.github/scripts/release/r2/: check.sh  publish.sh  summary.sh  verify.sh
.github/scripts/release/smoke/: smoke.ps1  smoke.sh
.github/workflows/: guard.yml  release-beta.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  lib.rs  main.rs  output.rs  update.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  diagnostics.rs  inspect.rs  lib.rs  paths.rs  plan.rs  process.rs  socket.rs  stamp.rs  state.rs
crates/tauri-dev-cli/: Cargo.toml
crates/tauri-dev-cli/src/: lib.rs
crates/tauri-dev-cli/tests/: cli.rs
crates/tauri-dev-core/: Cargo.toml
crates/tauri-dev-core/src/: lib.rs  state.rs
examples/: minimal.toml
scripts/: init.py
scripts/manage/: sidecar.ps1  sidecar.sh  tauri-dev.ps1  tauri-dev.sh
