[workspace]
members = [
  "crates/tauri-dev-cli",
  "crates/tauri-dev-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/PerishCode/tauri-dev"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-dev-core = { path = "crates/tauri-dev-core" }
toml = "0.8"

