[workspace]
members = [
  "crates/cli",
  "crates/core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/PerishCode/sidecar"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sidecar-core = { package = "core", path = "crates/core" }
toml = "0.8"
